test/org/midica/testfiles/failing/cond-too-many-operators.midica
INCLUDE inc/instruments.midica

VAR $x = 1

{ if $x==$x!=$x
	0  c  /4
}
